force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <displayFormat>Account-{0000000000}</displayFormat>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>