force-app/main/default/objects/Account/fields/Account_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>