force-app/main/default/objects/Account/fields/AccountBillingStatus2022__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingStatus2022__c</fullName>
    <label>AccountBillingStatus2022</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Disallow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>