force-app/main/default/objects/Account/fields/ACR_consumption_link__c.field-meta.xml
<CustomField>
    <fullName>ACR_consumption_link__c</fullName>
    <label>ACR consumption link</label>
    <type>Url</type>
</CustomField>