force-app/main/default/objects/Account/fields/Active_Contract__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>