force-app/main/default/objects/Account/fields/Active_Exhibition_Contract__c.field-meta.xml
<CustomField>
    <fullName>Active_Exhibition_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Exhibition Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Exhibition contracts ae allowed for this field.</errorMessage>
        <filterItems>
            <field>Contract.Business_Type__c</field>
            <operation>equals</operation>
            <value>Exhibition</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customers (Active Exhibition Contract)</relationshipLabel>
    <relationshipName>ExhibitionCustomers</relationshipName>
    <type>Lookup</type>
</CustomField>