force-app/main/default/objects/Account/fields/AD_Code__c.field-meta.xml
<CustomField>
    <fullName>AD_Code__c</fullName>
    <description>Authorised dealer code Mandatory &amp; Bank letter of AD Code is mandatory - required for CB only</description>
    <inlineHelpText>Authorised Dealer Code</inlineHelpText>
    <label>AD Code(KYC Partner)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>