force-app/main/default/objects/Account/fields/AD_Code_Manual_Input__c.field-meta.xml
<CustomField>
    <fullName>AD_Code_Manual_Input__c</fullName>
    <label>AD Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>