force-app/main/default/objects/Account/fields/Adjusted_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Contract_Amount__c</fullName>
    <formula>Active_Contract__r.Adjusted_Contract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>