force-app/main/default/objects/Account/fields/Adjustment_Amount_BATH__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount_BATH__c</fullName>
    <formula>BATH_Contract__r.Adjustment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>