force-app/main/default/objects/Account/fields/Annual_Contract_Balance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Balance__c</fullName>
    <label>Annual Contract Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>