force-app/main/default/objects/Account/fields/AWS_SYNC_Status__c.field-meta.xml
<CustomField>
    <fullName>AWS_SYNC_Status__c</fullName>
    <defaultValue>&quot;NA&quot;</defaultValue>
    <label>AWS SYNC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>