force-app/main/default/objects/Account/fields/Balance_ACR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_ACR_Amount__c</fullName>
    <label>Balance ACR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>