force-app/main/default/objects/Account/fields/BATH_Contract__c.field-meta.xml
<CustomField>
    <fullName>BATH_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BATH Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customers (BATH Contract)</relationshipLabel>
    <relationshipName>Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>