force-app/main/default/objects/Account/fields/Billing_Address_Fromula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Fromula__c</fullName>
    <formula>BillingStreet +&apos;, &apos; + BillingCity +&apos;, &apos;+ BillingState +&apos;, &apos;+ BillingCountry +&apos;, &apos;+ BillingPostalCode</formula>
    <label>Billing Address Fromula</label>
    <type>Text</type>
</CustomField>