force-app/main/default/objects/Account/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-31</fullName>
                <default>true</default>
                <label>01-31</label>
            </value>
            <value>
                <fullName>26-25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>