force-app/main/default/objects/Account/fields/Billing_Cycle_from_1_31__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_from_1_31__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Cycle from 1-31</label>
    <type>Checkbox</type>
</CustomField>