force-app/main/default/objects/Account/fields/Billing_Cycle_from_26_25__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_from_26_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Cycle from 26-25</label>
    <type>Checkbox</type>
</CustomField>