force-app/main/default/objects/Account/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipment</fullName>
                <default>true</default>
                <label>Shipment</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Forthnightly</fullName>
                <isActive>false</isActive>
                <label>Forthnightly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>