force-app/main/default/objects/Account/fields/blng__DefaultPaymentType__c.field-meta.xml
<CustomField>
    <fullName>blng__DefaultPaymentType__c</fullName>
    <label>Default Payment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>