force-app/main/default/objects/Account/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>e-Tailer</fullName>
            </value>
            <value>
                <fullName>Certification agency</fullName>
            </value>
            <value>
                <fullName>Hallmarking</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Refineries</fullName>
            </value>
            <value>
                <fullName>Gold Loan Company</fullName>
            </value>
            <value>
                <fullName>Exhibition Organizer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>