force-app/main/default/objects/Account/fields/Business_Type_BATH__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_BATH__c</fullName>
    <formula>TEXT(BATH_Contract__r.Business_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type</label>
    <type>Text</type>
</CustomField>