force-app/main/default/objects/Account/fields/Business_Type_eSHIP__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_eSHIP__c</fullName>
    <formula>TEXT( eSHIP_Contract__r.Business_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type</label>
    <type>Text</type>
</CustomField>