force-app/main/default/objects/Account/fields/BVC_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Company_ID__c</fullName>
    <formula>IF( ISPICKVAL(BVC_Legal_Entity__c, &apos;B.V. Chinai &amp; Co. (India) Private Limited&apos;) ,
&apos;BVCC0001&apos;,
(IF( ISPICKVAL(BVC_Legal_Entity__c, &apos;B.V.C. Logistics Private Limited&apos;) ,
&apos;BVCL0002&apos;,
IF( ISPICKVAL(BVC_Legal_Entity__c, &apos;B.V.C. Brinks Private Limited&apos;) ,
&apos;BVCB0003&apos;,
IF( ISPICKVAL(BVC_Legal_Entity__c, &apos;B.V.C. Trade Private Limited&apos;) ,
&apos;BVCC0007&apos;, &apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BVC Company ID</label>
    <type>Text</type>
</CustomField>