force-app/main/default/objects/Account/fields/BVC_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>BVC_Company_Type__c</fullName>
    <label>BVC Company Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB Customer</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>