force-app/main/default/objects/Account/fields/BVC_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>BVC_Legal_Entity__c</fullName>
    <label>BVC Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B.V. Chinai &amp; Co. (India) Private Limited</fullName>
            </value>
            <value>
                <fullName>B.V.C. Logistics Private Limited</fullName>
                <default>true</default>
                <label>B.V.C. Logistics Private Limited</label>
            </value>
            <value>
                <fullName>B.V.C. Brinks Private Limited</fullName>
            </value>
            <value>
                <fullName>B.V.C. Trade Private Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>