force-app/main/default/objects/Account/fields/BVC_Service__c.field-meta.xml
<CustomField>
    <fullName>BVC_Service__c</fullName>
    <label>Customer Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>