force-app/main/default/objects/Account/fields/BVC_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Site_ID__c</fullName>
    <label>BVC Site ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>