force-app/main/default/objects/Account/fields/BVC_Software_Id__c.field-meta.xml
<CustomField>
    <fullName>BVC_Software_Id__c</fullName>
    <label>BVC Software Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>