force-app/main/default/objects/Account/fields/BVC_Virtual_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>BVC_Virtual_Bank_Account_Number__c</fullName>
    <label>Virtual Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>