force-app/main/default/objects/Account/fields/BVCSoftwareID__c.field-meta.xml
<CustomField>
    <fullName>BVCSoftwareID__c</fullName>
    <description>BVC softwares in which data should be flow via AWS</description>
    <label>BVCSoftwareID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVC SYSTEM</fullName>
            </value>
            <value>
                <fullName>BKC</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>BITS - G</fullName>
            </value>
            <value>
                <fullName>BVC SYSTEM - AND - F3</fullName>
            </value>
            <value>
                <fullName>BVC SYSTEM - BKC - F1</fullName>
            </value>
            <value>
                <fullName>BVC SYSTEM - CORP - F4</fullName>
            </value>
            <value>
                <fullName>BVC SYSTEM - SAC - F6</fullName>
            </value>
            <value>
                <fullName>BVC SYSTEM - SEZ - F2</fullName>
            </value>
            <value>
                <fullName>BVC SYSTEM - SRT - F5</fullName>
            </value>
            <value>
                <fullName>Corvi</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - AMD - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - BKC - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - BKG - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - BLR - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - CHE - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - COC - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - DEL - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - HYD - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - JAI - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - KOL - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - SAC - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - SEZ - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - SRT - A2</fullName>
            </value>
            <value>
                <fullName>IVALSHIP - VIZ - A2</fullName>
            </value>
            <value>
                <fullName>MERCURY - A1</fullName>
            </value>
            <value>
                <fullName>PLUTO - E</fullName>
            </value>
            <value>
                <fullName>Tally Legacy</fullName>
            </value>
            <value>
                <fullName>VAMASHIP - C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>