force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;Manufacturer&quot;</defaultValue>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Merchant For BVCI</fullName>
                <isActive>false</isActive>
                <label>Merchant For BVCI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>