force-app/main/default/objects/Account/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <description>show the number of child parent has</description>
    <inlineHelpText>show the number of child parent has</inlineHelpText>
    <label>Child Account #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>