force-app/main/default/objects/Account/fields/Complete_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Primary_Address__c</fullName>
    <formula>Primary_Address__r.ADDRESS1__c +&apos; &apos; +  Primary_Address__r.ADDRESS2__c +&apos; &apos;+  Primary_Address__r.CITY__c +&apos; &apos;+ Primary_Address__r.STATE__c +&apos; &apos; + Primary_Address__r.COUNTRY__c +&apos; &apos;+ Primary_Address__r.PINCODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Primary Address</label>
    <type>Text</type>
</CustomField>