force-app/main/default/objects/Account/fields/Consignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Email__c</fullName>
    <label>Consignee Email</label>
    <type>Email</type>
</CustomField>