force-app/main/default/objects/Account/fields/Consinee_Address__c.field-meta.xml
<CustomField>
    <fullName>Consinee_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consinee Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Customers (Consinee Address)</relationshipLabel>
    <relationshipName>Customers1</relationshipName>
    <type>Lookup</type>
</CustomField>