force-app/main/default/objects/Account/fields/Consinee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consinee_Phone__c</fullName>
    <label>Consinee Phone</label>
    <type>Phone</type>
</CustomField>