force-app/main/default/objects/Account/fields/Consumed_ACR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consumed_ACR_Amount__c</fullName>
    <label>Consumed ACR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>