force-app/main/default/objects/Account/fields/Consumed_Amount_eSHIP__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Amount_eSHIP__c</fullName>
    <formula>eSHIP_Contract__r.Consumed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>