force-app/main/default/objects/Account/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <formula>Active_Contract__r.Contract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>