force-app/main/default/objects/Account/fields/Contract_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Business_Type__c</fullName>
    <formula>TEXT(Active_Contract__r.Business_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Business Type</label>
    <type>Text</type>
</CustomField>