force-app/main/default/objects/Account/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Active_Contract__r.EndDate</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>