force-app/main/default/objects/Account/fields/Contract_End_Date_BATH__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_BATH__c</fullName>
    <formula>BATH_Contract__r.EndDate</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>