force-app/main/default/objects/Account/fields/Contract_End_Date_eSHIP__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_eSHIP__c</fullName>
    <formula>eSHIP_Contract__r.EndDate</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>