force-app/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>Active_Contract__r.StartDate</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>