force-app/main/default/objects/Account/fields/Contract_Start_Date_BATH__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_BATH__c</fullName>
    <formula>BATH_Contract__r.StartDate</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>