force-app/main/default/objects/Account/fields/Contract_Start_Date_eSHIP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_eSHIP__c</fullName>
    <formula>eSHIP_Contract__r.StartDate</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>