force-app/main/default/objects/Account/fields/Contracted_ACR_Package__c.field-meta.xml
<CustomField>
    <fullName>Contracted_ACR_Package__c</fullName>
    <formula>Active_Contract__r.Contracted_ACR_Package__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted ACR Package</label>
    <type>Text</type>
</CustomField>