force-app/main/default/objects/Account/fields/Contracted_ACR_Package_BATH__c.field-meta.xml
<CustomField>
    <fullName>Contracted_ACR_Package_BATH__c</fullName>
    <formula>BATH_Contract__r.Contract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted ACR Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>