force-app/main/default/objects/Account/fields/Correspondence_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_AddressLine2__c</fullName>
    <label>Correspondence AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>