force-app/main/default/objects/Account/fields/Correspondence_City__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_City__c</fullName>
    <description>To capture city for correspondence address.</description>
    <label>Correspondence City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>