force-app/main/default/objects/Account/fields/Correspondence_Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Complete_Address__c</fullName>
    <formula>Correspondence_Street__c+&apos; &apos;+Correspondence_AddressLine2__c+&apos; &apos;+IF(ISBLANK(Correspondence_Zip_Postal_Code__c)||Correspondence_Zip_Postal_Code__c=0,&apos;&apos;,TEXT(Correspondence_Zip_Postal_Code__c))+&apos; &apos;+Correspondence_City__c+&apos; &apos;+Correspondence_State__c+&apos; &apos;+Correspondence_Country__c+&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correspondence Complete Address</label>
    <type>Text</type>
</CustomField>