force-app/main/default/objects/Account/fields/Correspondence_Country__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Country__c</fullName>
    <description>To capture country for correspondence address.</description>
    <label>Correspondence Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>