force-app/main/default/objects/Account/fields/Correspondence_State__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_State__c</fullName>
    <description>To capture state for correspondence address.</description>
    <label>Correspondence State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>