force-app/main/default/objects/Account/fields/Correspondence_Street__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Street__c</fullName>
    <description>To capture street for correspondence address.</description>
    <label>Correspondence AddressLine1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>