force-app/main/default/objects/Account/fields/Correspondence_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Zip_Postal_Code__c</fullName>
    <description>To capture zip code for correspondence address.</description>
    <label>Correspondence Zip/Postal Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>