force-app/main/default/objects/Account/fields/CPQ_Products_and_potential_revenue__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Products_and_potential_revenue__c</fullName>
    <label>CPQ Products and potential revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>