force-app/main/default/objects/Account/fields/Credit_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Credit Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Credit_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>