force-app/main/default/objects/Account/fields/Credit_Rating_Agency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_Agency__c</fullName>
    <label>Credit Rating Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>