force-app/main/default/objects/Account/fields/Credit_Rating_API_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating_API_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Rating API Status</label>
    <type>Checkbox</type>
</CustomField>