force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Non Credit</fullName>
                <default>true</default>
                <label>Non Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>